test_suite/tests/ui/conflict/flatten-skip-serializing-if.stderr
error: #[serde(flatten] can not be combined with #[serde(skip_serializing_if = "...")]
  --> $DIR/flatten-skip-serializing-if.rs:12:10
   |
12 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

